Bug 362455 - Build system does not honor --disable-printing; r=Standard8